# muvr-preclassification

./: .gitignore  CMakeLists.txt  README.md
config/svm/: svm-model-curl-features.libsvm  svm-model-curl-features.scale
core/: CMakeLists.txt
core/config/svm/: svm-model-bicep_curl-features.libsvm  svm-model-bicep_curl-features.rds  svm-model-bicep_curl-features.scale  svm-model-curl-features.rds  svm-model-triceps_pushdown-features.libsvm  svm-model-triceps_pushdown-features.rds  svm-model-triceps_pushdown-features.scale
core/include/: classifier.h  classifier_loader.h  device_data.h  device_data_decoder.h  easylogging++.h  ensemble_classifier.h  exercise_plan.h  export.h  piecewise_aggregate_approximation.h  raw_sensor_data.h  sampler.h  sax_classifier.h  sensor_data.h  sensor_format_decoder.h  sensor_formats.h  sensor_symbol.h  sensordata.h  sigproc.h  svm.h  svm_classifier.h  svm_classifier_factory.h  symbol_alphabet.h  symbolic_aggregate_approximation.h
core/main/: CMakeLists.txt
core/main/M/: all_1.csv  all_2.csv  all_4_svm.csv  exerciseset.m  kalman.m  matlab_workspace.mat  multiple.m  negative_samples.csv  nomovement.m  positive_samples.csv  positive_samples_me_left_hand  positive_samples_me_left_push  rt.m
core/test/: CMakeLists.txt
core/test/cc/: classifier_loader_test.cc  data_loader.cc  data_loader.h  data_patterns.cc  device_data_decoder_test.cc  device_data_generator.cc  device_data_loader.cc  exercise_decider_perf_test.cc  exercise_decider_test.cc  exercise_plan_test.cc  movement_decider_test.cc  nomovement_decider_test.cc  piecewise_aggregate_approximation_test.cc  raw_sensor_data_generator.cc  raw_sensor_data_loader.cc  raw_sensor_data_test.cc  sampler_test.cc  sax_classifier_test.cc  sensor_data_fuser_test.cc  sensor_format_decoder_test.cc  simple_exercise_plan_test.cc  svm_classifier_factory_test.cc  svm_classifier_test.cc  symbolic_aggregate_approximation.cc  symbolic_aggregate_approximation_test.cc  test_data.h  test_data_generator.cc  test_data_loader.cc
data/: CMakeLists.txt
gtest-1.7.0/cmake/: internal_utils.cmake
preclassification/: CMakeLists.txt
preclassification/core/: CMakeLists.txt
preclassification/core/include/: exercise_set.h  sigfft.h
preclassification/core/main/: CMakeLists.txt
preclassification/core/main/M/: all_4.csv  exerciseset.m  sigfft.m
preclassification/core/main/cc/: exercise_set.cc  sigfft.cc
preclassification/core/test/cc/: sigfft_test.cc
tools/: CMakeLists.txt
tools/exporter/: CMakeLists.txt
tools/exporter/cc/: exporter.cc
training-data/andrew-mixed-21-05/: 1.csv  1.raw  10.csv  10.raw  11.csv  11.raw  12.csv  12.raw  13.csv  13.raw  14.csv  14.raw  15.csv  15.raw  16.csv  16.raw  17.csv  17.raw  18.csv  18.raw  19.csv  19.raw  2.csv  2.raw  20.csv  20.raw  21.csv  21.raw  22.csv  22.raw  23.csv  23.raw  24.csv  24.raw  25.csv  25.raw  26.csv  26.raw  27.csv  27.raw  (+14 more)
training-data/jan-arms-11-06/: 1.raw  10.raw  11.raw  12.raw  13.raw  14.raw  15.raw  16.raw  17.raw  18.raw  19.raw  2.raw  20.raw  21.raw  22.raw  23.raw  24.raw  25.raw  26.raw  27.raw  28.raw  29.raw  3.raw  30.raw  31.raw  4.raw  5.raw  6.raw  7.raw  8.raw  9.raw  labels.txt
training-data/jan-arms-24-05/: labels.txt
training-data/jan-back-22-05/: labels.txt
training-data/jan-shoulders-21-05/: labels.txt
(+35 files in other folders)
