CMAKE_MINIMUM_REQUIRED (VERSION 2.8) 
PROJECT (preclassification) 
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
SET_PROPERTY(DIRECTORY . APPEND PROPERTY COMPILE_DEFINITIONS EYEBALL_DEBUG=1)
SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
ENABLE_TESTING()

FIND_PACKAGE(Boost REQUIRED COMPONENTS filesystem system)
FIND_PACKAGE(OpenCV REQUIRED)

SET(GTEST_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/gtest-1.7.0")
SET(GTEST_INCLUDE_DIR "${GTEST_ROOT}/include")
ADD_SUBDIRECTORY(${GTEST_ROOT} "${CMAKE_CURRENT_BINARY_DIR}/gtest")

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIR})

ADD_SUBDIRECTORY(core)
